--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <div class="feature">
         <img src="./assets/tables.png" alt="Masaların genel görünümünü gösteren bir resim">
-        <h2>İşyerinin Durumunu Gör</h2>
+        <h2>İş Yerinin Durumunu Gör</h2>
         <p>Detaylı ana sayfa ile tüm masaların durumunu tek bir bakışta öğren. Belirli süreyi dolduran masaları
             işaretle,
             masaları birleştir veya kolayca başka bir masaya taşı. İşletmenizin anlık durumunu yönetmenin en hızlı yolu!
@@ -134,7 +134,7 @@
     <div class="cta">
         <h2>Başlamak ister misin?</h2>
         <p>Yakında sizlerle! Uygulamamızı en iyi hale getirmek için çalışmaya devam ediyoruz.
-            Çok yakında işyerinizin yönetiminde fark yaratmaya hazır olun!</p>
+            Çok yakında iş yerinizin yönetiminde fark yaratmaya hazır olun!</p>
     </div>
 </body>
 
